# jtd-codebuild-2

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/: CONTRIBUTING.md
.github/workflows/: publish.yml  release.yml  test-and-lint.yml
ci/: install-jtd-codegen
jtd_codebuild/: loaders.py
jtd_codebuild/generators/: generator.py  python_generator.py  typescript_generator.py
jtd_codebuild/tests/: test_example_project_1.py  test_example_project_2.py  test_example_project_3.py  test_example_project_4.py
jtd_codebuild/tests/fixtures/example_project_2/src/definitions/: book.jtd.yaml
terraform/: main.tf
