[tool.poetry]
name = "jtd-codebuild"
version = "0.7.0"
description = "Tool for generating language specific schemas and interfaces code from JSON Type Definition IDL files in yaml format. Powered by jtd-codegen."
authors = ["01Joseph-Hwang10 <joseph95501@gmail.com>"]
license = "MIT"
readme = "README.md"
[[tool.poetry.packages]]
include = "jtd_codebuild"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
click = "^8.1.7"
case-converter = "^1.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
poethepoet = "^0.24.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.scripts]
jtd-codebuild = "jtd_codebuild.__main__:cli"

[tool.poe.tasks]
test = "python -m pytest"
lint = "flake8 jtd_codebuild"
check-format = "black jtd_codebuild --check"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = "/(\n  # The following are specific to Black, you probably don't want those.\n  tests/data\n  | profiling\n)/\n"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
